# bike-xuan

./: CNAME  README.md  README_CN.md  blog  can_command.md  kill_bike_xuan.sh  launch_bike_xuan.sh
bike_bringup/: CMakeLists.txt  package.xml
bike_bringup/launch/: bike_xuan_bringup.launch  bike_xuan_imu.launch
bike_core/: CMakeLists.txt  package.xml
bike_core/include/bike_core/: Balance.hpp  BikePid.hpp  BikeXuanControl.hpp  CanReceiveSend.hpp  ImuCH100.hpp  OdriveCommand.hpp  OdriveMotorConfig.hpp  RemoteControlParser.hpp  SbusSimulate.hpp  ServoControl.hpp  balance.hpp  blance.h
bike_core/msg/: odrive_can_msg.msg  odrive_motor_feedback_msg.msg  pid_params_msg.msg  remote_control_msg.msg  sbus_channels_msg.msg
bike_core/node/: BikeXuanCoreControlNode.cpp  CanSendReceiveNode.cpp  ParserRemoteDataNode.cpp  SbusSimulateOutputNode.cpp
bike_core/params/: bike_angle_pid.yaml  bike_angle_velocity_pid.yaml  bike_speed_pid.yaml  drive_wheel_speed_pid.yaml  odrive_motor_config.yaml
bike_core/src/: Balance.cpp  BikePid.cpp  BikeXuanControl.cpp  CanReceiveSend.cpp  ImuCH100.cpp  RemoteControlParser.cpp  SbusSimulate.cpp  ServoControl.cpp  balance.cpp  blance.c
bike_core/test/: bike_pid_test_node.cpp  can_send_receive_node.cpp  odrv0_config_test_node.cpp  sbus_simulate_test_node.cpp  servo_control_test_node.cpp  sub_imu_test_node.cpp
bike_stm_communication/: CMakeLists.txt  package.xml
bike_xuan_vision/: .gitignore  README.md
bike_xuan_vision/bike_vision/: CMakeLists.txt  package.xml
bike_xuan_vision/bike_vision/msg/: road_obstacle_msg.msg
bike_xuan_vision/bike_vision/params/: camera_k.txt  dist_matrix.txt  obstacle_rect.txt
bike_xuan_vision/bike_vision/pth/: best_epoch_weights.pth  bike_obstacle_classes.txt
bike_xuan_vision/bike_vision/scripts/: bike_yolo.py  params.py  record_video.py  sub_astra_raw_img.py  sub_compressed_img.py  vino_infer.py  vino_inference.py
bike_xuan_vision/bike_vision/scripts/bike_utils/: bike_utils.py  pnp_solve_dis.py
bike_xuan_vision/bike_vision/scripts/demo/: darknet53_demo.py  residual_block_body_demo.py  yolo_demo.py
bike_xuan_vision/bike_vision/scripts/model/: CSPdarknet53_tiny.py  yolo.py  yolo_training.py
bike_xuan_vision/bike_vision/scripts/utils/: utils.py  utils_bbox.py
bike_xuan_vision/bike_vision/scripts/vino_export/: models.onnx  yolox_nano.mapping  yolox_nano.xml
imu_ch100/: README.md
imu_ch100/imu_launch/launch/: imu_0x62_msg.launch  imu_0x91_msg.launch
imu_ch100/serial_imu/src/: serial_imu.cpp  serial_imu_0x62.cpp
serial_imu/: CMakeLists.txt
serial_imu/src/: serial_imu.cpp  serial_imu_0x91.cpp
