<?xml version="1.0"?>
<package format="2">
  <name>bike_core</name>
  <version>0.0.0</version>
  <description>The bike_core package</description>
  <maintainer email="hll@todo.todo">hll</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <build_depend>tf2</build_depend>
  <build_export_depend>tf2</build_export_depend>
  <exec_depend>tf2</exec_depend>
  <build_depend>tf2_ros</build_depend>
  <build_export_depend>tf2_ros</build_export_depend>
  <exec_depend>tf2_ros</exec_depend>
  <build_depend>tf</build_depend>
  <build_export_depend>tf</build_export_depend>
  <exec_depend>tf</exec_depend>
  <export>
  </export>
</package>
